Fix warning from credo and make ci fail if there are warnings/errors in credo

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -48,5 +48,6 @@ jobs:
       run: mix ecto.setup
     - name: Run tests
       run: mix test
-    - name: Run credo
-      run: mix credo
+    - name: Run credo - check for warnings and errors
+      run: |
+        mix credo || test $? -le 12
